# Shizuku-crawl

./: .gitignore  README.md  SUMMARY.md  TODO.md  apps.csv  apps.html  apps.json  ignore_list.lst  main.py  pyproject.toml  requirements.txt  scan_diff.json  scan_stats.json
.github/workflows/: run-crawler-pr.yml  run-crawler.yml
app_crawler/: __init__.py  cache.py  cli.py  config.py  http.py  known.py  models.py  normalize.py  outputs.py  pipeline.py  release_assets.py  rules.py  scoring.py  utils.py  webui.py
app_crawler/scanners/: __init__.py  base.py  codeberg.py  discovery.py  fdroid.py  github_code.py  github_forks.py  github_meta.py  github_releases.py  gitlab.py  registry.py
app_crawler_refactor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rules/: include.yaml  rules.yaml
tests/: test_appresult_roundtrip.py  test_discovery_queries.py  test_fork_lineage.py  test_gitlab_codeberg_enrichment.py  test_http_retry.py  test_incremental_mode.py  test_merge_and_review.py  test_phase2_outputs.py  test_release_assets.py  test_release_info_roundtrip.py  test_rules_and_scoring.py  test_scanner_defaults.py  test_scanner_registry.py  test_scoring_refinements.py  test_source_scanners_metadata.py  test_stats_metrics.py  test_utils_and_normalize.py  test_webui_helpers.py
